Adding unit tests for handler and solving issues